# CppInternationalization

./: CMakeLists.txt  README.md  main.cpp
locales/: my-domain.pot
locales/po/de/: my-domain.gmo  my-domain.po
locales/po/en/: my-domain.gmo  my-domain.po
locales/po/pl/: my-domain.gmo  my-domain.po
